--- a/sway/config
+++ b/sway/config
@@ -8,8 +8,8 @@ set $font  CascadiaCode
 
 #set $term zutty -font $font -fontsize 20 -autoCopy -saveLines 0
 #set $term alacritty -o 'font.family=$font' -o 'font.size=16' -o 'scrolling.history=0' -o 'colors.primary.background=#000000' -o 'colors.primary.foreground=#f8f8f2'
-#set $term footclient -o 'font=$font:size=16' -o 'scrollback.lines=0' -o 'cursor.color=111111 cccccc' -o 'colors.foreground=dddddd' -o 'colors.background=000000' -o 'colors.regular0=000000' -o 'colors.regular1=cc0403' -o 'colors.regular2=19cb00' -o 'colors.regular3=cecb00' -o 'colors.regular4=0d73cc' -o 'colors.regular5=cb1ed1' -o 'colors.regular6=0dcdcd' -o 'colors.regular7=dddddd' -o 'colors.bright0=767676' -o 'colors.bright1=f2201f' -o 'colors.bright2=23fd00' -o 'colors.bright3=fffd00' -o 'colors.bright4=1a8fff' -o 'colors.bright5=fd28ff' -o 'colors.bright6=14ffff' -o 'colors.bright7=ffffff'
-set $term foot -o 'font=$font:size=16' -o 'scrollback.lines=0' -o 'cursor.color=111111 cccccc' -o 'colors.foreground=dddddd' -o 'colors.background=000000' -o 'colors.regular0=000000' -o 'colors.regular1=cc0403' -o 'colors.regular2=19cb00' -o 'colors.regular3=cecb00' -o 'colors.regular4=0d73cc' -o 'colors.regular5=cb1ed1' -o 'colors.regular6=0dcdcd' -o 'colors.regular7=dddddd' -o 'colors.bright0=767676' -o 'colors.bright1=f2201f' -o 'colors.bright2=23fd00' -o 'colors.bright3=fffd00' -o 'colors.bright4=1a8fff' -o 'colors.bright5=fd28ff' -o 'colors.bright6=14ffff' -o 'colors.bright7=ffffff'
+set $term footclient -o 'font=$font:size=16' -o 'scrollback.lines=0' -o 'cursor.color=111111 cccccc' -o 'colors.foreground=dddddd' -o 'colors.background=000000' -o 'colors.regular0=000000' -o 'colors.regular1=cc0403' -o 'colors.regular2=19cb00' -o 'colors.regular3=cecb00' -o 'colors.regular4=0d73cc' -o 'colors.regular5=cb1ed1' -o 'colors.regular6=0dcdcd' -o 'colors.regular7=dddddd' -o 'colors.bright0=767676' -o 'colors.bright1=f2201f' -o 'colors.bright2=23fd00' -o 'colors.bright3=fffd00' -o 'colors.bright4=1a8fff' -o 'colors.bright5=fd28ff' -o 'colors.bright6=14ffff' -o 'colors.bright7=ffffff'
+#set $term foot -o 'font=$font:size=16' -o 'scrollback.lines=0' -o 'cursor.color=111111 cccccc' -o 'colors.foreground=dddddd' -o 'colors.background=000000' -o 'colors.regular0=000000' -o 'colors.regular1=cc0403' -o 'colors.regular2=19cb00' -o 'colors.regular3=cecb00' -o 'colors.regular4=0d73cc' -o 'colors.regular5=cb1ed1' -o 'colors.regular6=0dcdcd' -o 'colors.regular7=dddddd' -o 'colors.bright0=767676' -o 'colors.bright1=f2201f' -o 'colors.bright2=23fd00' -o 'colors.bright3=fffd00' -o 'colors.bright4=1a8fff' -o 'colors.bright5=fd28ff' -o 'colors.bright6=14ffff' -o 'colors.bright7=ffffff'
 
 set $menuopts 'librewolf\nyuzu\ngimp\nwin11\nandroid7\nzathura'
 #set $menu printf $menuopts | kickoff --from-stdin
@@ -193,8 +193,8 @@ bar {
 bindsym $mod+b bar mode toggle
 
 # screenshot
-bindsym Print     exec grim -l 0 - | wl-copy
-bindsym Alt+Print exec grim -l 0 -g "$(slurp)" - | wl-copy
+bindsym Print     exec grim -l 0 - | wl-copy -t image/png
+bindsym Alt+Print exec grim -l 0 -g "$(slurp)" - | wl-copy -t image/png
 
 # idle
 #----------------------------------------------------------------
@@ -202,9 +202,13 @@ exec swayidle -w \
        timeout 300 'swaymsg output \* dpms off' \
        resume 'swaymsg output \* dpms on'
 
-# screenshare: xdg-desktop-portal-wlr
-exec dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+exec gamepad_idle_inhibit
 
-# start after first time (not including reload)
-#----------------------------------------------------------------
-exec_always gentoo-pipewire-launcher restart
+# screenshare: xdg-desktop-portal-wlr
+#exec dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+
+# terminal
+exec_always foot --server
+
+# sound
+exec gentoo-pipewire-launcher
