mpv: use 64g ram as cache

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -5,7 +5,7 @@ sub-font='Cascadia Code'
 sub-font-size=32
 
 # cache
-demuxer-max-bytes=8GiB
+demuxer-max-bytes=64g
 
 # audio
 #af=lavfi=[loudnorm=I=-16:TP=-2:LRA=11]
