mpv: add ytdl options

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -20,6 +20,16 @@ hwdec=vulkan,vaapi-copy
 slang=en,eng,en-US
 alang=jp,jpn,en,eng,en-US
 
+# ytdl
+ytdl-format='bestvideo[height<=?1080]+bestaudio/best'
+
+ytdl-raw-options-append=limit-rate=2M
+ytdl-raw-options-append=format-sort=codec
+ytdl-raw-options-append=netrc=
+ytdl-raw-options-append=all-subs=
+ytdl-raw-options-append=write-sub=
+ytdl-raw-options-append=write-auto-sub=
+
 # music cover art
 audio-display=external-first
 cover-art-files=cover.jpg:../cover.jpg
