--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -21,10 +21,10 @@ slang=en,eng,en-US
 alang=jp,jpn,en,eng,en-US
 
 # ytdl
-ytdl-format='bestvideo[height<=?1080]+bestaudio/best'
+# vp9 vulkan decoding is not available, so prioritize vcodecs that have it
+ytdl-format='bestvideo[height<=?1080][vcodec~="^av1|h265|hevc|h264|avc"]+bestaudio/best'
 
 ytdl-raw-options-append=limit-rate=2M
-ytdl-raw-options-append=format-sort=codec
 ytdl-raw-options-append=netrc=
 ytdl-raw-options-append=all-subs=
 ytdl-raw-options-append=write-sub=
