mksh,mpv,newsraft,smartdns,sway,tofi: sync
- Change main font to AtkinsonHyperlegible
- Set color profile to 272E2F.icu
- Other updates

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,8 +1,9 @@
 # font
-osd-font='Cascadia Code'
+osd-font='Atkinson Hyperlegible'
 osd-font-size=32
-sub-font='Cascadia Code'
+sub-font='Atkinson Hyperlegible'
 sub-font-size=32
+sub-ass-override=force
 
 # cache
 demuxer-max-bytes=64g
@@ -24,12 +25,11 @@ alang=jp,jpn,en,eng,en-US
 # vp9 vulkan decoding is not available, so prioritize vcodecs that have it
 ytdl-format='bestvideo[height<=?1080][vcodec~="^av1|h265|hevc|h264|avc"]+bestaudio/best'
 
-ytdl-raw-options-append=limit-rate=2M
-ytdl-raw-options-append=netrc=
-ytdl-raw-options-append=all-subs=
-ytdl-raw-options-append=write-sub=
-ytdl-raw-options-append=write-auto-sub=
-
 # music cover art
 audio-display=external-first
-cover-art-files=cover.jpg:../cover.jpg
+
+# icc
+icc-profile=/usr/share/color/icc/272E2F.icm
+
+[anime]
+glsl-shaders="~~/shaders/Anime4K_Clamp_Highlights.glsl:~~/shaders/Anime4K_Restore_CNN_VL.glsl:~~/shaders/Anime4K_Upscale_CNN_x2_VL.glsl:~~/shaders/Anime4K_AutoDownscalePre_x2.glsl:~~/shaders/Anime4K_AutoDownscalePre_x4.glsl:~~/shaders/Anime4K_Upscale_CNN_x2_M.glsl"
