mpv: use new video sync configuration

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -16,6 +16,8 @@ vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
 hwdec=vulkan,vaapi-copy
+vulkan-queue-count=8
+video-sync=display-resample
 
 # lang
 slang=en,eng,en-US
