nftables: allow http3, rsync, imaps, smtp, irc traffic

--- a/nftables/nftables.conf
+++ b/nftables/nftables.conf
@@ -50,10 +50,14 @@ table ip restricted {
 
     udp dport 53 counter accept comment "outgoing dns traffic";
     udp dport 123 counter accept comment "outgoing ntp traffic";
+    udp dport 443 counter accept comment "outgoing http3 traffic";
     tcp dport 80 counter accept comment "outgoing http traffic";
     tcp dport 443 counter accept comment "outgoing https traffic";
     tcp dport 22 counter accept comment "outgoing ssh traffic";
-    #tcp dport 873 counter accept comment "outgoing rsync traffic";
+    tcp dport 873 counter accept comment "outgoing rsync traffic";
+    tcp dport 993 accept comment "outgoing imaps traffic";
+    tcp dport 587 accept comment "outgoing smtp+login traffic";
+    tcp dport 6697 accept comment "outgoing irc tls traffic";
     #udp dport 47584 counter accept comment "outgoing wreckfest traffic";
   }
 }
