nftables: allow icmp

--- a/nftables/nftables.conf
+++ b/nftables/nftables.conf
@@ -21,26 +21,25 @@ table netdev filter {
 
 table ip restricted {
   chain input {
-    type filter hook input priority 200;
-    policy drop;
+    # drop any incoming packets
+    type filter hook input priority 200; policy drop;
 
     ct state established,related accept;
 
     # allow loopback
     iifname lo accept;
+
+    ip protocol 1 accept comment "incoming icmp traffic";
   }
 
   chain forward {
-    type filter hook forward priority 200;
-
-    # do not accept forwarding
-    policy drop;
+    # drop any forwarded packets
+    type filter hook forward priority 200; policy drop;
   }
 
   chain output {
-    type filter hook output priority 200;
-    # do not accept output
-    policy drop;
+    # drop any outputing packets
+    type filter hook output priority 200; policy drop;
 
     ct state established,related accept;
 
@@ -48,6 +47,7 @@ table ip restricted {
     iifname lo accept;
     oifname lo accept;
 
+    ip protocol 1 accept comment "outgoing icmp traffic";
     udp dport 53 counter accept comment "outgoing dns traffic";
     udp dport 123 counter accept comment "outgoing ntp traffic";
     udp dport 443 counter accept comment "outgoing http3 traffic";
