mpv: reduce stuttering judder

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -18,6 +18,7 @@ gpu-context=waylandvk
 hwdec=vulkan,vaapi-copy
 vulkan-queue-count=8
 video-sync=display-resample
+interpolation
 
 # lang
 slang=en,eng,en-US
