mpv: add vp9 to vcodec selection
Vulkan vp9 decoding works

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -25,8 +25,7 @@ slang=en,eng,en-US
 alang=jp,jpn,en,eng,en-US
 
 # ytdl
-# vp9 vulkan decoding is not available, so prioritize vcodecs that have it
-ytdl-format='bestvideo[height<=?1080][vcodec~="^av1|h265|hevc|h264|avc"]+bestaudio/best'
+ytdl-format='bestvideo[height<=?1080][vcodec~="^av1|h265|hevc|h264|avc|vp9|vp09"]+bestaudio/best'
 
 # music cover art
 audio-display=external-first
