mpv: fix formatting

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,37 +1,38 @@
-# font
-osd-font='Atkinson Hyperlegible'
+# Font
+osd-font='Atkinson Hyperlegible Next'
 osd-font-size=32
-sub-font='Atkinson Hyperlegible'
-sub-font-size=32
+sub-font='Atkinson Hyperlegible Next'
+sub-font-size=48
+sub-pos=80
 sub-ass-override=force
 
-# cache
+# Language
+alang=jp,jpn,ko,kor,en,eng,en-US,tr,tur
+slang=en,eng,en-US
+
+# Cache
 demuxer-max-bytes=64g
 
-# audio
+# Audio
+# set volume to 100 and use the sound server to actually control the volume
 #af=lavfi=[loudnorm=I=-16:TP=-2:LRA=11]
 
-# video
+# Video
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
 hwdec=vulkan,vaapi-copy
 vulkan-queue-count=8
+
+# try to sync a/v
 video-sync=display-resample
 interpolation
 
-# lang
-slang=en,eng,en-US
-alang=jp,jpn,en,eng,en-US
+# monitor color profile
+#icc-profile=/usr/share/color/icc/272E2F.icm
 
 # ytdl
-ytdl-format='bestvideo[height<=?1080][vcodec~="^av1|h265|hevc|h264|avc|vp9|vp09"]+bestaudio/best'
-
-# music cover art
-audio-display=external-first
-
-# icc
-icc-profile=/usr/share/color/icc/272E2F.icm
+ytdl-format='bestvideo[height<=?1080][vcodec~="^av1|av01|h265|hevc|h264|avc|vp9|vp09"]+bestaudio/best'
 
 [anime]
 glsl-shaders="~~/shaders/Anime4K_Clamp_Highlights.glsl:~~/shaders/Anime4K_Restore_CNN_VL.glsl:~~/shaders/Anime4K_Upscale_CNN_x2_VL.glsl:~~/shaders/Anime4K_AutoDownscalePre_x2.glsl:~~/shaders/Anime4K_AutoDownscalePre_x4.glsl:~~/shaders/Anime4K_Upscale_CNN_x2_M.glsl"
